--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,4 +5,5 @@ spring:
       password: ${POSTGRES_PASSWORD:pass}
       driver-class-name: org.postgresql.Driver
   flyway:
+    enabled: true
     locations: classpath:db/migration
