--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,9 @@
+server:
+  address: 0.0.0.0
+  port: 8080
 spring:
+  config:
+    import: optional:file:.env[.properties]
   datasource:
       url: jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:postgres}?currentSchema=app
       username: ${POSTGRES_USER:dbuser}
